--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <canvas id="ChartCanvas" width="600" height="600" style="border:1px solid #c3c3c3;">Your browser does not support the canvas element.</canvas>                                    <!-- Portfolio Modal - Text-->
+                                    <canvas id="chartCanvas" width="600" height="600" style="border:1px solid #c3c3c3;">Your browser does not support the canvas element.</canvas>                                    <!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
