--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <h3 class="text-center text-uppercase text-secondary mb-0">Cartoon</h3>
+                <h3 class="text-center text-uppercase text-secondary mb-0">Projects</h3>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                 </div>
@@ -93,7 +93,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="#" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" />
                         </div>
                     </div>
                     <!-- Icon Divider-->
@@ -344,6 +344,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
+                                    <canvas id="canvas"></canvas>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -473,6 +474,7 @@
         <script src="js/scripts.js"></script>
         <script src="js/simple.js"></script>
         <script src="js/tree.js"></script>
+        <script src="js/girl.js"></script>
         <script src="js/chart.js"></script>
     </body>
 </html>
