--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" />
+                            <a href="animation/index.html"><img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
                         </div>
                     </div>
                     <!-- Icon Divider-->
