--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                             <a href="animation/index.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
+                                </div></a>
+                            <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" />
                     </div>
                     <!-- Icon Divider-->
                     <div class="divider-custom">
@@ -318,7 +318,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 3-->
-        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
