--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                             <a href="animation/index.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                                </div></a>
-                            <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" />
+                                
+                                <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
                     </div>
                     <!-- Icon Divider-->
                     <div class="divider-custom">
@@ -462,7 +461,6 @@
         <script src="js/scripts.js"></script>
         <script src="js/simple.js"></script>
         <script src="js/tree.js"></script>
-        <script src="js/girl.js"></script>
         <script src="js/chart.js"></script>
     </body>
 </html>
