--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
                             <a href="animation/index.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
+                        </div>
                     </div>
                     <!-- Icon Divider-->
                     <div class="divider-custom">
