--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+                        <div class="portfolio-item mx-auto">
+                            <a href="notebook/index.html">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="#" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/notebook.jpg" alt="" />
+                            </a>
                         </div>
                     </div>
                 </div>
