--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                     <h3 class="text-center text-uppercase text-secondary mb-0">Labs</h3>
                     <div class="divider-custom">
                     <div class="divider-custom-line"></div>
+                    </div>
                     <!-- Portfolio Item 7-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
