--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">CISC 3610</p>
+                <p class="masthead-subheading font-weight-light mb-0">CISC 3610 - Multimedia Programming</p>
                 <!-- Graphic Artist - Web Designer - Illustrator -->
             </div>
         </header>
@@ -69,25 +69,27 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
-                    <!-- Portfolio Item 1-->
+                    <!-- Portfolio Project Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
+                            <div class="item-title"><p>01-cartoon</p></div>
                         </div>
                     </div>
-                    <!-- Portfolio Item 2-->
+                    <!-- Portfolio Project Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/tree.png" alt="" />
+                            <div class="item-title"><p>02-animation(1)</p></div>
                         </div>
                     </div>
-                    <!-- Portfolio Item 3-->
+                    <!-- Portfolio Project Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <a href="animation/index.html">
@@ -95,9 +97,10 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
+                                <div class="item-title"><p>02-animation(2)</p></div>
                         </div>
                     </div>
-                    <!-- Portfolio Item 4-->
+                    <!-- Portfolio Project Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <a href="data-visualization/index.html">
@@ -105,6 +108,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/data-visualization.png" alt="" /></a>
+                            <div class="item-title"><p>03-data visualization</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -126,6 +130,11 @@
                                 <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
                         </div>
                     </div> -->
+                    </div>
+                  </div>
+               </section>
+                    <section class="page-section portfolio" id="portfolio">
+                    <div class="container">
                     <!-- Icon Divider-->
                     <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -136,37 +145,85 @@
                     <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     </div>
-                    <!-- Portfolio Item 7-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <!-- Portfolio Grid Items-->
+                    <div class="row justify-content-center">
+                    <!-- Portfolio Item Lab 1-->
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/chart.png" alt="" />
+                            <div class="item-title"><p>01-chart</p></div>
                         </div>
                     </div>
-                    <!-- Portfolio Item 8-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                    <!-- Portfolio Item Lab 2-->
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <a href="numbers/index.html">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/numbers.png" alt="" /></a>
+                            <div class="item-title"><p>02-number animation</p></div>
                         </div>
                     </div>
-                    <!-- Portfolio Item 9-->
-                    <div class="col-md-6 col-lg-4">
+                    <!-- Portfolio Item Lab 3-->
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <a href="notebook/index.html">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/notebook.jpg" alt="" /></a>
+                            <div class="item-title"><p>03-notebook</p></div>
                         </div>
                     </div>
+                <!-- Portfolio Item Lab 4-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <a href="drag_and_drop/index.html">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/fruits-in-basket.jpg" alt="" /></a>
+                        <div class="item-title"><p>04-drag and drop</p></div>
+                    </div>
                 </div>
-                
+                <!-- Portfolio Item Lab 5-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <a href="resume/index.html">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/resume.png" alt="" /></a>
+                        <div class="item-title"><p>05-resume</p></div>
+                    </div>
+                </div>
+                <!-- Portfolio Item Lab 6-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <a href="audio/index.html">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/piano-keyboard.png" alt="" /></a>
+                        <div class="item-title"><p>06-audio</p></div>
+                    </div>
+                </div>
+                <!-- Portfolio Item Lab 7-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <a href="video/index.html">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/youtube.jpg" alt="" /></a>
+                        <div class="item-title"><p>07-video</p></div>
+                    </div>
+                </div>
+                </div>
             </div>
         </section>
         <!-- About Section-->
@@ -399,80 +456,6 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <canvas id="chartCanvas" width="600" height="600" style="border:1px solid #c3c3c3;">Your browser does not support the canvas element.</canvas>                                    <!-- Portfolio Modal - Text-->
-                                    <button class="btn btn-primary" data-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        Close Window
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio Modal 5-->
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
-            <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content">
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                    </button>
-                    <div class="modal-body text-center">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Tasty Cake</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
-                                    <h3 class="text-center text-uppercase text-secondary mb-0">Unfinished</h3>
-                                    <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
-                                    <!-- Portfolio Modal - Text-->
-                                    <button class="btn btn-primary" data-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        Close Window
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Portfolio Modal 6-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
-            <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content">
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                    </button>
-                    <div class="modal-body text-center">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Submarine</h2>
-                                    <!-- Icon Divider-->
-                                    <div class="divider-custom">
-                                        <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                        <div class="divider-custom-line"></div>
-                                    </div>
-                                    <h3 class="text-center text-uppercase text-secondary mb-0">Unfinished</h3>
-                                    <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
-                                    <!-- Portfolio Modal - Text-->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
