--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <!--  All snippets are MIT license http://bootdey.com/license -->
     <title>resume - Liyu Lin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
 </head>
 
