--- a/index.html
+++ b/index.html
@@ -112,14 +112,16 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
-                    <!-- <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto">
+                            <a href="voice_recognition_project/index.html">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/tree.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/vegetables.png" alt="" /></a>
+                            <div class="item-title"><p>04-voice recognition project</p></div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- Portfolio Item 6-->
                     <!-- <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
