--- a/index.html
+++ b/index.html
@@ -123,15 +123,16 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
-                    <!-- <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
-                            <a href="animation/index.html">
+                            <a href="https://llyu0966.github.io/bobo-jump/">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
+                                <img class="img-fluid" src="assets/img/portfolio/winner.jpg" alt="" /></a>
+                                <div class="item-title"><p>05-game project</p></div>
                         </div>
-                    </div> -->
+                    </div> 
                     </div>
                   </div>
                </section>
