--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">CISC 3610 - Multimedia Programming</p>
+                <p class="masthead-subheading font-weight-light mb-0">Multimedia Programming</p>
                 <!-- Graphic Artist - Web Designer - Illustrator -->
             </div>
         </header>
@@ -243,7 +243,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead">Hi. My name is Liyu Lin or you can call me Jade. I come from Guangdong, China. I've been lived in New York City for 7 years. My major is Computer Science and My minor is Mathematics. This is my senior year in Brooklyn College.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">A fun fact about me is that I really enjoy hip-pop music, dancing, and coding. I aim to leverage a proven knowledge of programming, research & analysis skills, and web design to successfully fill the Software Engineer position at a technology company.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">A fun fact about me is that I really enjoy hip-pop music, dancing, and coding. I aim to leverage a proven knowledge of programming, research & analysis skills, and web design to successfully fill the Junior Software Engineer position at a technology company.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
