--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
-                            <div class="item-title"><p>01-cartoon</p></div>
+                            <div class="item-title"><p>cartoon</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Project Item 2-->
@@ -86,7 +86,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/tree.png" alt="" />
-                            <div class="item-title"><p>02-animation(1)</p></div>
+                            <div class="item-title"><p>animation(1)</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Project Item 3-->
@@ -97,7 +97,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/girl.png" alt="" /></a>
-                                <div class="item-title"><p>02-animation(2)</p></div>
+                                <div class="item-title"><p>animation(2)</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Project Item 4-->
@@ -108,7 +108,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/data-visualization.png" alt="" /></a>
-                            <div class="item-title"><p>03-data visualization</p></div>
+                            <div class="item-title"><p>data visualization</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -119,7 +119,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/vegetables.png" alt="" /></a>
-                            <div class="item-title"><p>04-voice recognition project</p></div>
+                            <div class="item-title"><p>voice recognition project</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -130,7 +130,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/winner.jpg" alt="" /></a>
-                                <div class="item-title"><p>05-game project</p></div>
+                                <div class="item-title"><p>game project</p></div>
                         </div>
                     </div> 
                     </div>
@@ -138,16 +138,6 @@
                </section>
                     <section class="page-section portfolio" id="portfolio">
                     <div class="container">
-                    <!-- Icon Divider-->
-                    <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                    </div>
-                    <h3 class="text-center text-uppercase text-secondary mb-0">Labs</h3>
-                    <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    </div>
                     <!-- Portfolio Grid Items-->
                     <div class="row justify-content-center">
                     <!-- Portfolio Item Lab 1-->
@@ -157,7 +147,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/chart.png" alt="" />
-                            <div class="item-title"><p>01-chart</p></div>
+                            <div class="item-title"><p>chart</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Item Lab 2-->
@@ -168,7 +158,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/numbers.png" alt="" /></a>
-                            <div class="item-title"><p>02-number animation</p></div>
+                            <div class="item-title"><p>number animation</p></div>
                         </div>
                     </div>
                     <!-- Portfolio Item Lab 3-->
@@ -179,7 +169,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/notebook.jpg" alt="" /></a>
-                            <div class="item-title"><p>03-notebook</p></div>
+                            <div class="item-title"><p>notebook</p></div>
                         </div>
                     </div>
                 <!-- Portfolio Item Lab 4-->
@@ -190,7 +180,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <img class="img-fluid" src="assets/img/portfolio/fruits-in-basket.jpg" alt="" /></a>
-                        <div class="item-title"><p>04-drag and drop</p></div>
+                        <div class="item-title"><p>drag and drop</p></div>
                     </div>
                 </div>
                 <!-- Portfolio Item Lab 5-->
@@ -201,7 +191,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <img class="img-fluid" src="assets/img/portfolio/resume.png" alt="" /></a>
-                        <div class="item-title"><p>05-resume</p></div>
+                        <div class="item-title"><p>resume</p></div>
                     </div>
                 </div>
                 <!-- Portfolio Item Lab 6-->
@@ -212,7 +202,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <img class="img-fluid" src="assets/img/portfolio/piano-keyboard.png" alt="" /></a>
-                        <div class="item-title"><p>06-audio</p></div>
+                        <div class="item-title"><p>audio</p></div>
                     </div>
                 </div>
                 <!-- Portfolio Item Lab 7-->
