--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
                         <img class="img-fluid" src="assets/img/portfolio/youtube.jpg" alt="" /></a>
-                        <div class="item-title"><p>07-video</p></div>
+                        <div class="item-title"><p>video</p></div>
                     </div>
                  </div>
                </div>
