--- a/resume/index.html
+++ b/resume/index.html
@@ -31,14 +31,6 @@
                     <p class="text-white">Liyu Lin</p>
                   </div>
                   <div class="candidate-info">
-                    <h6 class="text-white">Email:</h6>
-                    <p class="text-white">lliyu.brooklyn@gmail.com</p>
-                  </div>
-                  <div class="candidate-info">
-                    <h6 class="text-white">Phone:</h6>
-                    <p class="text-white">(347) 277-9945</p>
-                  </div>
-                  <div class="candidate-info">
                     <h6 class="text-white">Address:</h6>
                     <p class="text-white">Brooklyn, NY, USA</p>
                   </div>
@@ -109,7 +101,7 @@
                           <h6 class="mb-2">BS, Computer Science, Mathematics Minor</h6>
                           <span>- Brooklyn College/CUNY</span>
                           <ul>
-                            <li><p class="mt-2"><b>GPA: 3.8/4.0</b></p></li>
+                            <li><p class="mt-2"><b>GPA: 3.83/4.00</b></p></li>
                             <li><p class="mt-2">Relevant courses: Data Structure, Computer Architecture, Math Modeling & Simulation, Human-Computer Interaction, Numerical Analysis, Database Systems.</p></li>
                             <li><p class="mt-2">Received Dean’s List Awards (2018 Fall, 2019 Fall, 2020 Spring, 2020 Fall).</li>
                             <li><p class="mt-2">Member of Upsilon Pi Epsilon computing discipline honor society.</li>
@@ -139,6 +131,24 @@
                 </div>
                 <div class="timeline-box mt-4">
                   <h5 class="resume-experience-title">Work &amp; Experience:</h5>
+                  <!-- CTP Tech Prep -->
+                  <div class="jobster-candidate-timeline">
+                    <div class="jobster-timeline-item">
+                      <div class="jobster-timeline-cricle">
+                        <i class="far fa-circle"></i>
+                      </div>
+                      <div class="jobster-timeline-info">
+                        <div class="dashboard-timeline-info">
+                          <span class="jobster-timeline-time">Jun 2021 - Present</span>
+                          <h6 class="mb-2">Software Developer</h6>
+                          <span>- CUNY Tech Prep</span>
+                          <ul>
+                            <li><p class="mt-2">Learn in-demand technologies like React, Node + Express, and PostgreSQL as well as industry best practices for design, implementation, and deployment such as MVC, version control with Git/GitHub, agile & Scrum with Trello and Slack, test driven development, and CI/CD</p></li>
+                          </ul>                         
+                        </div>
+                      </div>
+                    </div>
+                    <!-- EasyFind -->
                   <div class="jobster-candidate-timeline">
                     <div class="jobster-timeline-item">
                       <div class="jobster-timeline-cricle">
@@ -158,6 +168,7 @@
                         </div>
                       </div>
                     </div>
+                    <!-- Adier Corporation -->
                     <div class="jobster-timeline-item mb-0">
                       <div class="jobster-timeline-cricle">
                         <i class="far fa-circle"></i>
